--- a/UPeU/src/main/webapp/WEB-INF/web.xml
+++ b/UPeU/src/main/webapp/WEB-INF/web.xml
@@ -70,6 +70,12 @@
 		<description></description>
 		<servlet-class>edu.upeu.ventas.web.curso.CursoEditarServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>AlumnoEliminarServlet</servlet-name>
+		<display-name>AlumnoEliminarServlet</display-name>
+		<description></description>
+		<servlet-class>edu.upeu.ventas.web.alumno.AlumnoEliminarServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>HomeServlet</servlet-name>
 		<url-pattern>/home</url-pattern>
@@ -113,5 +119,9 @@
 	<servlet-mapping>
 		<servlet-name>CursoEditarServlet</servlet-name>
 		<url-pattern>/cursos/editar</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AlumnoEliminarServlet</servlet-name>
+		<url-pattern>/AlumnoEliminarServlet</url-pattern>
 	</servlet-mapping>
 </web-app>
